[package]
name = "prettygmodpatcher"
authors = ["smokingplaya"]
repository = "https://github.com/smokingplaya/prettygmod/"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
colored = "2.1.0"
lazy_static = "1.5.0"
reqwest = "0.12.9"
serde_json = "1.0.133"

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.serde]
version = "1.0.216"
features = ["derive"]

[dependencies.hashbrown]
version = "0.15.2"
features = ["serde"]